--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,3 +55,8 @@ jobs:
           name: pest-detection-fargate
           template: ./cloudformation/ecs-service.yml
           no-fail-on-empty-changeset: "1"
+      
+      - name: Force CloudFormation Update
+        run: |
+            aws cloudformation update-stack --stack-name pest-detection-fargate --template-body file://cloudformation/ecs-service.yml  --capabilities CAPABILITY_IAM
+  
