--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
           template: ./cloudformation/ecs-service.yml
           no-fail-on-empty-changeset: "1"
       
-      - name: Force CloudFormation Update
-        run: |
-            aws cloudformation update-stack --stack-name pest-detection-fargate --template-body file://cloudformation/ecs-service.yml  --capabilities CAPABILITY_IAM
+      # - name: Force CloudFormation Update
+      #   run: |
+      #       aws cloudformation update-stack --stack-name pest-detection-fargate --template-body file://cloudformation/ecs-service.yml  --capabilities CAPABILITY_IAM
   
